--- a/RevolutionsMod.csproj
+++ b/RevolutionsMod.csproj
@@ -11,10 +11,10 @@
     <Exec Command="&quot;$(tMLBuildServerPath)&quot; -build $(ProjectDir) -eac $(TargetPath) -define $(DefineConstants) -unsafe $(AllowUnsafeBlocks)" />
   </Target>
   <ItemGroup>
-    <None Remove="Content\First.fx" />
+    <None Remove="Effects\Core.fx" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Content\First.fx" />
+    <Resource Include="Effects\Core.fx" />
   </ItemGroup>
 <ItemGroup>
     <Reference Include="Microsoft.CodeAnalysis">
